--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.windowtitle=
 jlink.launcher=false
 jlink.launcher.name=JavaChat
 junit.selected.version=3
-main.class=Cliente.Vista.VentCliente
+main.class=Cliente.Controlador.Launcher
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
